Parte 12: Cloud Messaging - Código final

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">android_firebase</string>
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 </resources>
